--- a/src/main/resources/templates/layouts/BaseLayout/index.html
+++ b/src/main/resources/templates/layouts/BaseLayout/index.html
@@ -107,15 +107,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="m-portlet__head-tools">
-                            <ul class="m-portlet__nav">
-                                <li class="m-portlet__nav-item m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" m-dropdown-toggle="hover" aria-expanded="true">
-                                    <a th:href="@{/topic/create}" style="text-decoration: none">
-                                        <span style="padding-left: 5px;">Create New Topic</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                        <div layout:fragment="button"></div>
                     </div>
                     <div class="m-portlet__body">
                         <div layout:fragment="content"></div>
