--- a/src/main/resources/templates/pages/Topic/TopicDetail/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicDetail/index.html
@@ -83,29 +83,31 @@
                                         </div>
                                         <div style="max-height: 400px; overflow-y: auto; border: 1px solid #ccc; overflow-x: hidden; padding-top: 10px">
                                             <div th:each="partition : ${partitions}" style="margin: 0px 10px 10px 10px; padding: 10px 10px; border: dashed 1px wheat">
-                                                <div style="padding-top: 20px; display: flex;">
-                                                    <span style="width: 100%;" class="m-widget6__caption">
-                                                        Partition
-                                                    </span>
-                                                    <span th:text="${partition.partition}" style="width: 100%;" class="example-text-input"></span>
-                                                </div>
-                                                <div style="padding-top: 20px; display: flex;">
-                                                    <span style="width: 100%;" class="m-widget6__caption">
-                                                        Leader
-                                                    </span>
-                                                    <span th:text="${partition.leader}" style="width: 100%;" class="example-text-input"></span>
-                                                </div>
-                                                <div style="padding-top: 20px; display: flex;">
-                                                    <span style="width: 100%;" class="m-widget6__caption">
-                                                        Replicas
-                                                    </span>
-                                                    <span th:text="${partition.replicas}" style="width: 100%;" class="example-text-input"></span>
-                                                </div>
-                                                <div style="padding-top: 20px; display: flex;">
-                                                    <span style="width: 100%;" class="m-widget6__caption">
-                                                        ISR
-                                                    </span>
-                                                    <span th:text="${partition.isr}" style="width: 100%;" class="example-text-input"></span>
+                                                <div style="padding-top: 20px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px;">
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div class="m-widget6__caption" style="flex-grow: 1; min-width: 50px;">
+                                                            Partition:
+                                                        </div>
+                                                        <div th:text="${partition.partition}" style="flex-grow: 1; min-width: 50px;" class="example-text-input"></div>
+                                                    </div>
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div style="flex-grow: 1; min-width: 50px;" class="m-widget6__caption">
+                                                            Broker Leader:
+                                                        </div>
+                                                        <div th:text="${partition.leader}" style="flex-grow: 1; min-width: 50px;"class="example-text-input"></div>
+                                                    </div>
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div style="flex-grow: 1; min-width: 200px;" class="m-widget6__caption">
+                                                            Replicas [Broker List]:
+                                                        </div>
+                                                        <div th:text="${partition.replicas}" style="flex-grow: 1; min-width: 50px;" class="example-text-input"></div>
+                                                    </div>
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div style="flex-grow: 1; min-width: 200px;" class="m-widget6__caption">
+                                                            ISR [Broker List]:
+                                                        </div>
+                                                        <div th:text="${partition.isr}" style="flex-grow: 1; min-width: 50px;" class="example-text-input"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
