added filter input: fileter topic by topic name in topic list ui

--- a/src/main/resources/static/assets/demo/base/style.bundle.css
+++ b/src/main/resources/static/assets/demo/base/style.bundle.css
@@ -21531,7 +21531,7 @@ body.m-portlet--fullscreen {
   .m-widget6 .m-widget6__item .m-widget6__text {
     color: #898b96; }
   .m-widget6 .m-widget6__item .m-widget6__caption {
-    color: #a6a7c1; }
+    color: #32115d; }
   .m-widget6 .m-widget6__item:last-child {
     border-bottom: 0; }
 
