--- a/src/main/resources/templates/layouts/BaseLayout/index.html
+++ b/src/main/resources/templates/layouts/BaseLayout/index.html
@@ -66,6 +66,7 @@
     <!--end::Global Theme Styles -->
     <link rel="shortcut icon" href="/assets/demo/media/img/logo/favicon.ico" />
 
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js"></script>
 </head>
 
 <!-- end::Head -->
@@ -77,15 +78,6 @@
         <!-- begin::Header -->
         <header layout:fragment="header"></header>
         <!-- end::Header -->
-
-<!--        &lt;!&ndash; begin::Body &ndash;&gt;-->
-<!--        <div style="width: 100%; padding-top: 70px !important;"-->
-<!--             class="m-grid__item m-grid__item&#45;&#45;fluid  m-grid m-grid&#45;&#45;ver-desktop m-grid&#45;&#45;desktop 	m-container m-container&#45;&#45;responsive m-container&#45;&#45;xxl m-page__container m-body">-->
-<!--            <div class="m-grid__item m-grid__item&#45;&#45;fluid m-wrapper">-->
-<!--                <div layout:fragment="subheader"></div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash; end::Body &ndash;&gt;-->
 
         <!-- begin::Body -->
         <div style="width: 100%; padding-top: 70px !important;" class="m-grid__item m-grid__item--fluid  m-grid m-grid--ver-desktop m-grid--desktop 	m-container m-container--responsive m-container--xxl m-page__container m-body">
@@ -198,6 +190,8 @@
         <script src="/assets/app/js/dashboard.js" type="text/javascript"></script>
 
         <!--end::Page Scripts -->
+
+        <th:block layout:fragment="footer-scripts"></th:block>
     </div>
 </body>
 </html>
