--- a/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
+++ b/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
@@ -16,50 +16,77 @@
     <th:block layout:fragment="info" th:text="|Create new ${mainLabel} UI|"></th:block>
 
     <th:block layout:fragment="content">
-        <div class="m-widget6">
-            <div class="form-group m-form__group row">
-                <div class="col-10 ml-auto">
-                    <h3 class="m-form__section">Create new topic</h3>
+        <div style="display: grid; grid-template-columns: repeat(2, 1fr);">
+            <div class="m-widget6">
+                <div class="form-group m-form__group row">
+                    <div class="col-10 ml-auto">
+                        <h3 class="m-form__section">Create new topic</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group m-form__group row">
-                <label for="example-text-input" class="col-2 col-form-label">Topic Name</label>
-                <div class="col-7">
-                    <input style="max-width: 50%;" class="form-control m-input" type="text" value="Example 1"/>
+                <div class="form-group m-form__group row">
+                    <label for="example-text-input" class="col-2 col-form-label">Topic Name</label>
+                    <div class="col-7">
+                        <input style="max-width: 50%;" class="form-control m-input" type="text" value="Example 1"/>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group m-form__group row">
-                <label for="example-text-input" class="col-2 col-form-label">Partition Number</label>
-                <div class="col-7">
-                    <input type="number" value="1" style="max-width: 50%;" class="form-control m-input" />
+                <div class="form-group m-form__group row">
+                    <label for="example-text-input" class="col-2 col-form-label">Partition Number</label>
+                    <div class="col-7">
+                        <input type="number" value="1" style="max-width: 50%;" class="form-control m-input" />
+                    </div>
                 </div>
-            </div>
-            <div class="form-group m-form__group row">
-                <label for="example-text-input" class="col-2 col-form-label">Replica Factor Number</label>
-                <div class="col-7">
-                    <input type="number" value="1" style="max-width: 50%;" class="form-control m-input"/>
+                <div class="form-group m-form__group row">
+                    <label for="example-text-input" class="col-2 col-form-label">Replica Factor Number</label>
+                    <div class="col-7">
+                        <input type="number" value="1" style="max-width: 50%;" class="form-control m-input"/>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group m-form__group row">
-                <label for="example-text-input" class="col-2 col-form-label">List of Topic Config</label>
-                <div class="col-7">
-                    <div style="display: flex;">
-                        <select class="form-control m-input" id="configKey">
-                            <option value="">Choose Config Attribute</option>
-                            <option th:each="entry : ${configMap}"
-                                    th:value="${entry.key}"
-                                    th:text="${entry.key}">
-                            </option>
-                        </select>
+                <div class="form-group m-form__group row">
+                    <label for="example-text-input" class="col-2 col-form-label">List of Topic Config</label>
+                    <div class="col-7">
+                        <div style="display: flex;">
+                            <select class="form-control m-input" id="configKey">
+                                <option value="">Choose Config Attribute</option>
+                                <option th:each="entry : ${configMap}"
+                                        th:value="${entry.key}"
+                                        th:text="${entry.key}">
+                                </option>
+                            </select>
 
-                        <select style="margin-left: 10px;" class="form-control m-input" id="configValue">
-                            <option value="">Config Value</option>
-                        </select>
-                        <button type="reset" class="btn btn-accent m-btn m-btn--air m-btn--custom">Add</button>
+                            <select style="margin-left: 10px; margin-right: 10px" class="form-control m-input" id="configValue">
+                                <option value="">Config Value</option>
+                            </select>
+                            <button type="reset" class="btn btn-accent m-btn m-btn--air m-btn--custom">Add</button>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="col-10 ml-auto">
+                <h3 class="m-form__section">Config Added</h3>
+            </div>
         </div>
+    </th:block>
+
+    <th:block layout:fragment="footer-scripts">
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.15.2/dist/cdn.min.js"></script>
+        <script th:inline="javascript">
+            const data = [[${configMap}]];
+
+            const keySelect = document.getElementById("configKey");
+            const valueSelect = document.getElementById("configValue");
+
+            keySelect.addEventListener("change", () => {
+                const values = data[keySelect.value] || [];
+                valueSelect.innerHTML = '<option value="">Choose Atrribute Value</option>';
+
+                values.forEach(v => {
+                    const option = document.createElement("option");
+                    option.value = v;
+                    option.textContent = v;
+                    valueSelect.appendChild(option);
+                });
+            });
+        </script>
     </th:block>
 </body>
 </html>
