create js function for createing config for topic, backend is not changed

--- a/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
+++ b/src/main/resources/templates/pages/Topic/CreateNewTopic/index.html
@@ -24,31 +24,31 @@
                     </div>
                 </div>
                 <form>
-                    <input type="hidden" name="listJson" :value="JSON.stringify(list)">
+                    <input type="text" name="config" :value="JSON.stringify(list)">
 
                     <div class="form-group m-form__group row">
                         <label for="example-text-input" class="col-2 col-form-label">Topic Name</label>
                         <div class="col-7">
-                            <input style="width: 300px;" class="form-control m-input" type="text" value="Example 1"/>
+                            <input name="topicName" style="width: 300px;" class="form-control m-input" type="text" value="Example 1"/>
                         </div>
                     </div>
                     <div class="form-group m-form__group row">
                         <label for="example-text-input" class="col-2 col-form-label">Partition Number</label>
                         <div class="col-7">
-                            <input type="number" value="1" style="width: 150px;" class="form-control m-input" />
+                            <input name="partitionNum" type="number" value="1" style="width: 150px;" class="form-control m-input" />
                         </div>
                     </div>
                     <div class="form-group m-form__group row">
                         <label for="example-text-input" class="col-2 col-form-label">Replica Factor Number</label>
                         <div class="col-7">
-                            <input type="number" value="1" style="width: 150px;" class="form-control m-input"/>
+                            <input name="replicaFNum" type="number" value="1" style="width: 150px;" class="form-control m-input"/>
                         </div>
                     </div>
                     <div class="form-group m-form__group row">
                         <label for="example-text-input" class="col-2 col-form-label">List of Topic Config</label>
                         <div class="col-7">
                             <div style="display: flex;">
-                                <select style="width: 200px;" x-model="selectedCategory" class="form-control m-input" id="configKey">
+                                <select style="width: 200px;" x-model="attribute" class="form-control m-input" id="configKey">
                                     <option value="">Choose Config Attribute</option>
                                     <option th:each="entry : ${configMap}"
                                             th:value="${entry.key}"
@@ -56,7 +56,7 @@
                                     </option>
                                 </select>
 
-                                <select x-model="selectedItem" style="width: 200px; margin-left: 10px; margin-right: 10px" class="form-control m-input" id="configValue">
+                                <select x-model="value" style="width: 200px; margin-left: 10px; margin-right: 10px" class="form-control m-input" id="configValue">
                                     <option value="">Config Value</option>
                                 </select>
                                 <button type="button" @click="add()" class="btn btn-accent m-btn m-btn--air m-btn--custom">Add</button>
@@ -74,9 +74,9 @@
                 </div>
                 <div style="max-height: 360px; overflow-y: auto; border: 1px solid #ccc; overflow-x: hidden;">
                     <template x-for="(row, index) in list" :key="index">
-                        <div style="margin-bottom: 10px; display: flex;">
-                            <span x-text="row.category" style="width: 50%; padding: 15px 30px; word-wrap: break-word;" class="form-control m-input"></span>
-                            <span x-text="row.item"  style="width: 50%; padding: 15px 30px; margin-left: 10px; word-wrap: break-word;" class="form-control m-input"></span>
+                        <div @click="remove(row.attribute, row.value)" style="margin-bottom: 10px; display: flex;">
+                            <span x-text="row.attribute" style="width: 50%; padding: 15px 30px; word-wrap: break-word;" class="form-control m-input"></span>
+                            <span x-text="row.value"  style="width: 50%; padding: 15px 30px; margin-left: 10px; word-wrap: break-word;" class="form-control m-input"></span>
                         </div>
                     </template>
                 </div>
@@ -86,27 +86,47 @@
 
     <th:block layout:fragment="footer-scripts">
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.15.2/dist/cdn.min.js"></script>
-        <script>
+        <script th:inline="javascript">
             function formData() {
-                const data = [[${configMap}]];
-
+                const data = /*[[${configMap}]]*/ {};
                 return {
-                    selectedCategory: "",
-                    selectedItem: "",
+                    map: data,
+                    attribute: "",
+                    value: "",
                     list: [],
 
                     add() {
-                        if (!this.selectedCategory || !this.selectedItem) {
+                        if (!this.attribute || !this.value) {
                             alert("Hãy chọn cả 2 combobox!");
                             return;
+                        } else if (this.map[this.attribute].includes(this.value)) {
+                            if(this.isDuplicate()) {
+                                alert("Config đã được thêm trước đó");
+                                return;
+                            }
+
+                            this.list.push({
+                            attribute: this.attribute,
+                            value: this.value
+                            });
+                            return;
                         }
+                        alert("Value không hợp lệ!");
+                        return;
+                    },
 
-                        if()
+                    isDuplicate() {
+                        return this.list.some(
+                        item => item.attribute === this.attribute
+                        && item.value === this.value
+                        );
+                    },
 
-                        this.list.push({
-                            category: this.selectedCategory,
-                            item: this.selectedItem
-                        });
+                    remove(key, value) {
+                        this.list = this.list.filter(
+                        item =>
+                            !(item.attribute === key && item.value === value)
+                        );
                     }
                 }
             }
